--- a/defense/defense.tex
+++ b/defense/defense.tex
@@ -36,6 +36,7 @@
 \usepackage{mathrsfs}							% For Weinberg-esque letters
 \usepackage{cancel}							% For "SUSY-breaking" symbol
 \usepackage{slashed}							% for slashed characters in math mode
+\usepackage{ulem}                                                       % For striking through text
 \usepackage{bbm}             						% for \mathbbm{1} (unit matrix)
 \usepackage{amsthm}							% For theorem environment
 \usepackage{multirow}							% For multi row cells in table
@@ -68,8 +69,8 @@
 
 
 \author[Preston Hinkle\quad {thinkle@uci.edu}]{Preston Hinkle}
-\title[Resistive-pulse sensing for microscale applications
-]{Resistive-pulse sensing for microscale applications
+\title[Resistive-pulse sensing for micro- and nanoscale applications
+]{Resistive-pulse sensing at the micro- and nanoscale applications
 }
 \institute{University of California, Irvine}
 \date{\today}
